# Backend/src/1_routes/organizer.route.js
@@ -4,7 +4,7 @@ const payloadValidator = require("../2_middlewares/payloadValidator.middleware")
 const verifyAccessLevel = require("../2_middlewares/verifyAccessLevel.middleware");
 const { USER_VOLUNTEER } = require("../utils/constants");
 const { organizerCommentCreateSchema } = require("../2_middlewares/request_schemas/organizerCommentRequest.schema");
-const { postOrganizerComment, getOrganizerComments } = require("../3_controllers/organizer.controller");
+const { postOrganizerComment, getOrganizerComments, getOrganizerPublicProfileController } = require("../3_controllers/organizer.controller");
 
 const organizerRoute = express.Router();
 
@@ -15,5 +15,6 @@ organizerRoute.get("/:organizerId/comments", getOrganizerComments);
 organizerRoute.use(verifySesion);
 
 organizerRoute.post("/:organizerId/comments", payloadValidator(organizerCommentCreateSchema), verifyAccessLevel([USER_VOLUNTEER]), postOrganizerComment);
+organizerRoute.get("/:organizerId/public-profile", getOrganizerPublicProfileController);
 
 module.exports = organizerRoute;
