# Backend/src/1_routes/volunteer.route.js
@@ -2,15 +2,15 @@ const express = require("express");
 const verifySesion = require("../2_middlewares/verifySesion.middleware");
 const verifyAccessLevel = require("../2_middlewares/verifyAccessLevel.middleware");
 const { USER_VOLUNTEER } = require("../utils/constants");
-const { deleteInscription } = require("../3_controllers/volunteer.controller");
+const { deleteInscription, getVolunteerPublicProfileController } = require("../3_controllers/volunteer.controller");
 
 const volunteerRoute = express.Router();
 
 // Public
-// volunteer profile ***************
 
 // Private
 volunteerRoute.use(verifySesion);
 volunteerRoute.delete("/inscriptions/:inscriptionId", verifyAccessLevel([USER_VOLUNTEER]), deleteInscription);
+volunteerRoute.get("/:volunteerId/public-profile", getVolunteerPublicProfileController);
 
 module.exports = volunteerRoute;
